# youtubeCLI

./: AGENTS.md  README.md  __init__.py  pyproject.toml  setup.sh
cli/: main.py  youtube.py
tests/: test_cli.py
